uploading all files

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1457,7 +1457,42 @@ Granularities},
    language  = "en"
  }
  
-#### 
+@ARTICLE{Lin1991-pt,
+   title    = "Divergence measures based on the Shannon entropy",
+   author   = "Lin, J",
+   abstract = "A novel class of information-theoretic divergence measures based
+               on the Shannon entropy is introduced. Unlike the well-known
+               Kullback divergences, the new measures do not require the
+               condition of absolute continuity to be satisfied by the
+               probability distributions involved. More importantly, their close
+               relationship with the variational distance and the probability of
+               misclassification error are established in terms of bounds. These
+               bounds are crucial in many applications of divergence measures.
+               The measures are also well characterized by the properties of
+               nonnegativity, finiteness, semiboundedness, and boundedness.",
+   journal  = "IEEE Trans. Inf. Theory",
+   volume   =  37,
+   number   =  1,
+   pages    = "145--151",
+   month    =  jan,
+   year     =  1991,
+   keywords = "Entropy;Probability distribution;Upper bound;Pattern
+               analysis;Signal analysis;Signal processing;Pattern
+               recognition;Taxonomy;Genetics;Computer science"
+ }
+ 
 
-
+@BOOK{Faraway2016-uk,
+   title     = "Extending the Linear Model with {R} : Generalized Linear, Mixed
+                Effects and Nonparametric Regression Models, Second Edition",
+   author    = "Faraway, Julian J",
+   abstract  = "Start Analyzing a Wide Range of Problems Since the publication
+                of the bestselling, highly recommended first edition, R has
+                considerably",
+   publisher = "Chapman and Hall/CRC",
+   edition   = "2nd Edition",
+   month     =  mar,
+   year      =  2016
+ }
+ 
 
